--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev  # Le bon Dockerfile !
+      no_cache: true  # Force rebuild sans cache
     container_name: postiz
     restart: always
     env_file:
